# sudoku-solver-task

./: .gitignore  Pipfile  README.md  decision_sudoku.py  pyproject.toml  requirements.txt  rest_solve.py  result.json  setup.cfg  solve_sudoku.py  sud.py  sudoku.json  test_decision_sudoku.py  test_rest_solve.py  web_solve.py
.github/workflows/: python-app.yml
src/sudoku_solver_task/: cli_solve_sudoku.py  rest_solve_sudoku.py
static/css/: style.css
templates/: index.html
tests/: test_rest_solve_sudoku.py  test_sudoku_solver.py
