[tool.poetry]
name = "sudoku-solver-task"
version = "0.1.0"
description = ""
authors = ["suband74 <suband@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "8.0.1"
Flask = "2.0.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"
autopep8 = "1.5.7"
black = "21.8b0"
flake8 = "3.9.2"
flake8-bugbear = "21.4.3"
flake8-builtins = "1.5.3"
flake8-commas = "2.0.0"
flake8-import-order = "0.18.1"
flake8-polyfill = "1.0.2"
flake8-variables-names = "0.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
